Fix input widths Add image Add colour

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>No Fear Task Planner</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -12,27 +12,40 @@
 
 </head>
 
+<header>
+<!-- header logo and nav bar goes in here-->
+
+</header>
+
+
 <body>
 
+  <div class="container-fluid">
+    <!-- Task planner heading goes here - not sure how to use container??-->
+    <h2 id="container-item-h2" class="text-light bg-info d-flex justify-content-center">A Task Planner for Robin's Amazing Students</h2>
+    <h4 id="container-item-h4" class="text-secondary font-italic d-flex justify-content-center">Keep yourself organised throughout your Generation course!</h4>
+    <img src="https://knilt.arcc.albany.edu/images/9/99/To-do.jpg" alt="To do post-it note" class="img-todo rounded mx-auto d-block"/>
+  </div>
 
+  <div>
   <form>
 
     <!-- Task Name Input -->
     <div class="form-group">
-      <label for="formGroupTaskName">Task Name</label>
-      <input type="text" class="form-control" id="formGroupTaskName" placeholder="Name of Task">
+      <label class="labelName" for="formGroupTaskName">Task Name</label>
+      <input type="text" class="form-control col-md-6" id="formGroupTaskName" placeholder="Name of Task">
     </div>
 
     <!-- Task Description Input -->
     <div class="form-group">
-      <label for="formGroupDescription">Description</label>
-      <input type="text" class="form-control" id="formGroupDescription" placeholder="Description of task">
+      <label class="labelDescription" for="formGroupDescription">Description</label>
+      <input type="text" class="form-control col-md-6" id="formGroupDescription" placeholder="Description of task">
     </div>
 
     <!-- Assigned To Input DropDown List -->
-      <div class="form-group col-md-4">
-      <label for="inputAssigned">Assigned To</label>
-      <select id="inputAssigned" class="form-control">
+      <div class="form-group col-md-2">
+      <label for="labelAssigned">Assigned To</label>
+      <select id="labelAssigned" class="form-control">
         <option selected>Choose...</option>
         <option>Amr</option>
         <option>Anya</option>
@@ -44,28 +57,33 @@
     <!-- Date Input -->
     <div class="form-group"> 
       <label class="control-label" for="date">Due Date</label>
-      <input class="form-control" id="date" name="date" placeholder="DD/MM/YYYY" type="text"/>
+      <input class="form-control col-1" id="date" name="date" placeholder="DD/MM/YYYY" type="text"/>
     </div>
     
     <!-- Task Status Input DropDown List -->
-    <div class="form-group col-md-4">
-      <label for="inputStatus">Status</label>
-      <select id="inputStatus" class="form-control">
+    <div class="form-group col-md-2">
+      <label for="labelStatus">Status</label>
+      <select id="labelStatus" class="form-control">
         <option selected>Choose...</option>
-        <option>Not started</option>
+        <option>To do</option>
         <option>In progress</option>
-        <option>Completed</option>
+        <option>Review</option>
+        <option>Done</option>
     </select>
     </div> 
 
     <!-- Submit button -->
     <div class="form-group"> 
-      <button class="btn btn-primary " name="submit" type="submit">Submit</button>
+      <button class="btn btn-info" name="submit" type="submit">Submit</button>
     </div>
 
   </form>
+</div>
 
+<div>
+<!-- Card section goes in here-->
 
+</div>
 
 </body>
 </html>
